添加remapper